# remnabot

./: .env.example  .gitignore  Dockerfile.local  Makefile  README.md  README.ru_RU.md  docker-compose.local.yml  docker-compose.prod.external.yml  docker-compose.prod.internal.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml  prod-docker-release.yml  tests.yml
assets/translations/ru/: buttons.ftl  events.ftl  messages.ftl  notifications.ftl  utils.ftl
src/: __main__.py  lifespan.py
src/api/: app.py
src/application/common/: __init__.py  cryptography.py  email_sender.py  interactor.py  mailer.py  notifier.py  policy.py  remnawave.py
src/application/dto/: __init__.py  base.py  broadcast.py  build.py  message_payload.py  payment_gateway.py  plan.py  referral.py  settings.py  subscription.py  transaction.py  user.py
src/application/events/: __init__.py  base.py  system.py  user.py
src/application/protocols/: __init__.py  cryptography.py  event_bus.py  notifier.py  translator.py  uow.py
src/application/services/: __init__.py  access.py  bot.py  notification.py  pricing.py  (+4 more)
src/bot/: keyboards.py
src/core/: constants.py  enums.py  exceptions.py  logger.py  types.py
src/services/: access.py  notification.py  payment_gateway.py  referral.py  remnawave.py  transaction.py  user.py
src/telegram/: dispatcher.py  keyboards.py  states.py  utils.py
src/web/: app.py  dependencies.py
tests/: conftest.py  test_banner.py  test_bot_provider.py  test_layered_storage.py  test_lte_squad.py  test_mailer.py  test_set_user_email.py  test_user_dto.py
(+230 files in other folders)
